test/ui/tests/lowering/toplevel-obligatory-annotations.stderr
error[E015]: a mandatory type annotation is missing on the declaration `Alpha`
 --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:3:11
  |
3 | data Alpha of
  |          >< 
  |
 help: provide a type annotation for the declaration with `: ?type`

error[E015]: a mandatory type annotation is missing on the parameter `a`
 --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:4:11
  |
4 |     alpha a
  |           ^ 
  |
 help: provide a type annotation for the parameter with `(a: ?type)`

error[E015]: a mandatory type annotation is missing on the declaration `alpha`
 --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:4:12
  |
4 |     alpha a
  |           >< 
  |
 help: provide a type annotation for the declaration with `: ?type`

error[E015]: a mandatory type annotation is missing on the parameter `A`
 --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:6:11
  |
6 | data Beta A of
  |           ^ 
  |
 help: provide a type annotation for the parameter with `(A: ?type)`

error[E015]: a mandatory type annotation is missing on the declaration `Beta`
 --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:6:12
  |
6 | data Beta A of
  |           >< 
  |
 help: provide a type annotation for the declaration with `: ?type`

error[E015]: a mandatory type annotation is missing on the parameter `A`
 --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:7:10
  |
7 |     beta A: Beta A
  |          ^ 
  |
 help: provide a type annotation for the parameter with `(A: ?type)`

error[E015]: a mandatory type annotation is missing on the declaration `number`
 --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:9:7
  |
9 | number = 0
  |      >< 
  |
 help: provide a type annotation for the declaration with `: ?type`

error[E015]: a mandatory type annotation is missing on the parameter `f`
  --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:7
   |
11 | apply f x (y) = f x
   |       ^ 
   |
  help: provide a type annotation for the parameter with `(f: ?type)`

error[E015]: a mandatory type annotation is missing on the parameter `x`
  --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:9
   |
11 | apply f x (y) = f x
   |         ^ 
   |
  help: provide a type annotation for the parameter with `(x: ?type)`

error[E015]: a mandatory type annotation is missing on the parameter `y`
  --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:11
   |
11 | apply f x (y) = f x
   |           ^^^ 
   |
  help: provide a type annotation for the parameter with `(y: ?type)`

error[E015]: a mandatory type annotation is missing on the declaration `apply`
  --> ${DIRECTORY}/lowering/toplevel-obligatory-annotations.lushui:11:14
   |
11 | apply f x (y) = f x
   |             >< 
   |
  help: provide a type annotation for the declaration with `: ?type`

error: aborting due to 11 previous errors
 note: the error E015 has a detailed explanation
 help: run `lushui explain E015` to view it

